--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
 h1 {
   color: red;
+  text-align: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 32px;
 }
 
 .block {
+  text-align: center;
+  line-height: 28px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 24px;
   color: blue;
+}
+
+img {
+  max-width: 100%;
+  min-width: 20%;
 }
